updated trader using sql coalsce
